added statrter code

--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>JavaScript Quiz</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="./assets/style.css" />
+    </head>
 
+    <body>
+        <header class = "nav">
+            <div>Vew high score</div> 
+            <div class="timer">Time</div>
+        </header>
+
+        <main>
+            <section class="container">
+                <h1>Coding Quiz Challenge</h1>
+                <div>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by 15 seconds</div>
+                <button id="start">Start Quiz</button>
+            </section>
+            <section>
+                <div class="question"></div>
+                <div class="list-answers"></div>
+            </section>
+
+            <section>
+                <div class="result">Wrong</div>
+                <div class="result">Correct</div>
+            </section>
+        </main>
+
+        <script src="./script.js"></script>
+    </body>
+
+</html>
