add initial quiz logic

--- a/index.html
+++ b/index.html
@@ -15,22 +15,17 @@
 
         <main>
             <section class="container">
-                <h1>Coding Quiz Challenge</h1>
-                <div>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by 15 seconds</div>
-                <button id="start">Start Quiz</button>
-            </section>
-            <section>
-                <div class="question"></div>
-                <div class="list-answers"></div>
+                <h1 class="question"></h1>
+                <div class="firstPrompt"></div>
+                <button id="start"></button>
             </section>
 
             <section>
-                <div class="result">Wrong</div>
-                <div class="result">Correct</div>
+                <div class="result"></div>
             </section>
         </main>
 
-        <script src="./script.js"></script>
+        <script src="/assets/script.js"></script>
     </body>
 
 </html>
