added all pages

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
             <section>
                 <div class="result"></div>
+                <div id="msg"></div>
             </section>
         </main>
 
